# MPM-Implementation

./: CMakeLists.txt  README.md
examples/: CMakeLists.txt  bvh_tree.cc  obj_loader.cc  particle_initialization.cc  particle_movement.cc
src/flint/: CMakeLists.txt
src/flint/accel/: Tree.h  TreeBuilder.h  ValueGrid.h
src/flint/accel/bvh/: Tree.h  TreeBuilder.h
src/flint/core/: AxisAlignedBox.h  Camera.h  Iterator.h  Math.h  MultiGrid.h  Optional.h  TypeHelpers.h  VectorUtils.h
src/flint/geometry/: FixedPolygon.h  Geometry.cc  Geometry.h  Mesh.h  Polygon.h  Quad.h  Triangle.h
src/flint/import/: ObjLoader.cc  ObjLoader.h
src/flint/intersection/: Bound.h  Intersect.h  Ray.h  RayGroup.h
src/flint/intersection/bvh/: Tree.h
src/flint/intersection/object/: Triangle.h
src/flint/sampling/: Box.h  Mesh.h  Random.h
src/flint/utility/: Sequence.h
src/flint_viewport/: CMakeLists.txt  CameraControls.h  viewport.cc  viewport.h
src/flint_viewport/gl/: ShaderProgram.cc  ShaderProgram.h
src/simulation/: AttributeGrid.h  AttributeStorage.h  AttributeTransfer.h  CMakeLists.txt  MACGrid.h  MPMSimulation.cc  MPMSimulation.h  ParticleSet.h
tests/: CMakeLists.txt  main.cc
tests/flint/intersection/: AxisAlignedBox.cc
